--- a/assets/estilos/SaSS/_grales.scss
+++ b/assets/estilos/SaSS/_grales.scss
@@ -1,6 +1,18 @@
 @use 'vars' as *;
 @use 'predef' as *;
 
+@font-face {
+  font-family: 'Bebas Neue';
+  src: url(../../fuentes/BebasNeue-Regular.woff) format('woff');
+  font-display: auto;
+}
+
+@font-face {
+  font-family: 'Antonio', sans-serif;
+  src: url(../../fuentes/Antonio-VariableFont_wght.woff) format('woff');
+  font-display: auto;
+}
+
 /*
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
@@ -57,17 +69,17 @@
 //   font-weight: 100;
 // }
 
-@font-face {
-  font-family: 'Bebas Neue';
-  src: url(../../fuentes/BebasNeue-Regular.woff) format('woff');
-  font-display: auto;
-}
+// @font-face {
+//   font-family: 'Bebas Neue';
+//   src: url(../../fuentes/BebasNeue-Regular.woff) format('woff');
+//   font-display: auto;
+// }
 
-@font-face {
-  font-family: 'Antonio', sans-serif;
-  src: url(../../fuentes/Antonio-VariableFont_wght.woff) format('woff');
-  font-display: auto;
-}
+// @font-face {
+//   font-family: 'Antonio', sans-serif;
+//   src: url(../../fuentes/Antonio-VariableFont_wght.woff) format('woff');
+//   font-display: auto;
+// }
 
 
 html,
@@ -105,12 +117,16 @@ a {
   color: inherit;
 }
 
+h1 {
+  font-size: 9svw;
+  text-transform: uppercase;
+  color: map-get($color, "negro");
+}
+
 .h1__01 {
   font-family: $fam_02;
   font-size: 12svw;
   font-weight: 100;
-  color: map-get($color, "negro");
-  text-transform: uppercase;
   // line-height: 1;
 }
 
@@ -118,8 +134,6 @@ a {
   font-family: $fam_01;
   font-size: 14.1svw;
   font-weight: 900;
-  color: map-get($color, "negro");
-  text-transform: uppercase;
   // line-height: 1;
 }
 
