--- a/assets/estilos/SaSS/_vars.scss
+++ b/assets/estilos/SaSS/_vars.scss
@@ -1,16 +1,16 @@
 // ***GENERALES***
 // Tamaño fuente raíz
-@font-face {
-    font-family: 'Bebas Neue';
-    src: url(../../fuentes/BebasNeue-Regular.woff) format('woff');
-    font-display: auto;
-}
+// @font-face {
+//     font-family: 'Bebas Neue';
+//     src: url(../../fuentes/BebasNeue-Regular.woff) format('woff');
+//     font-display: auto;
+// }
   
-@font-face {
-    font-family: 'Antonio', sans-serif;
-    src: url(../../fuentes/Antonio-VariableFont_wght.woff) format('woff');
-    font-display: auto;
-}
+// @font-face {
+//     font-family: 'Antonio', sans-serif;
+//     src: url(../../fuentes/Antonio-VariableFont_wght.woff) format('woff');
+//     font-display: auto;
+// }
 
 $root_fsize: 16px !important;
 
