--- a/assets/estilos/SaSS/_grales.scss
+++ b/assets/estilos/SaSS/_grales.scss
@@ -1,6 +1,8 @@
 @use 'vars' as *;
 @use 'predef' as *;
 
+@import url('https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600;700&family=Bebas+Neue&display=swap');
+
 // @font-face {
 //   font-family: 'Bebas Neue';
 //   src: url(../../fuentes/BebasNeue-Regular.woff) format('woff');
