--- a/assets/estilos/SaSS/styles.css
+++ b/assets/estilos/SaSS/styles.css
@@ -259,21 +259,8 @@ a {
 }
 
 h1 {
-  font-size: 9svw;
   text-transform: uppercase;
   color: #000;
-}
-
-.h1__01 {
-  font-family: "Antonio", sans-serif;
-  font-size: 12svw;
-  font-weight: 100;
-}
-
-.h1__02 {
-  font-family: "Bebas Neue", sans-serif;
-  font-size: 14.1svw;
-  font-weight: 900;
 }
 
 #contenedor {
@@ -331,6 +318,16 @@ h1 {
   display: inline-block;
   flex-grow: 2;
 }
+#contenedor #cabecera .cabecera__movil .cabecera__movil--marca .cabecera__movil--marca_txt .h1__01 {
+  font-family: "Antonio", sans-serif;
+  font-size: 12svw;
+  font-weight: 100;
+}
+#contenedor #cabecera .cabecera__movil .cabecera__movil--marca .cabecera__movil--marca_txt .h1__02 {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 14.1svw;
+  font-weight: 900;
+}
 #contenedor #cabecera .cabecera__movil .cabecera__movil--menu_btn {
   display: inline-block;
 }
@@ -353,7 +350,7 @@ h1 {
   padding: 3svh;
   top: 0;
   left: -100%;
-  transition: 0.5s ease all;
+  transition: 0.3s ease all;
   background-color: #333;
 }
 #contenedor #cabecera .cabecera__movil--menu .cabecera__movil--menu_cerrar {
@@ -405,7 +402,83 @@ h1 {
 }
 #contenedor #cabecera .cabecera__movil--menu.abierto {
   left: 0;
-  transition: 0.5s ease all;
+  transition: 0.3s ease all;
+}
+#contenedor #cabecera .cabecera__dkp {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0px;
+  height: 21vh;
+  background-color: #f1f1f1;
+  padding: 0 2.5%;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--marca {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0px;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--marca .cabecera__dkp--marca_img {
+  display: inline-block;
+  width: 99.125px;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--marca .cabecera__dkp--marca_img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  display: block;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--marca .cabecera__dkp--marca_txt {
+  display: inline-block;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--marca .cabecera__dkp--marca_txt h1 {
+  display: inline-block;
+  line-height: 1;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--marca .cabecera__dkp--marca_txt h1 .h1__01--dkp {
+  font-family: "Antonio", sans-serif;
+  font-size: 71.37px;
+  font-weight: 100;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--marca .cabecera__dkp--marca_txt h1 .h1__02--dkp {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 87.23px;
+  font-weight: 900;
+  line-height: 0;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--menu {
+  display: inline-block;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--menu ul {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0px;
+  list-style: none;
+  font-size: 3svh;
+  font-family: "Antonio", sans-serif;
+  text-transform: uppercase;
+  color: #333;
+  line-height: 1;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--menu ul li {
+  display: inline-block;
+  padding: 0 1svh;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--menu ul li a {
+  color: #333;
+  cursor: pointer;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--menu ul li a:hover {
+  color: #960101;
+}
+#contenedor #cabecera .cabecera__dkp .cabecera__dkp--menu ul li:last-child {
+  padding: 0 0 0 1svh;
 }
 
 /*
