--- a/assets/estilos/SaSS/_estruct.scss
+++ b/assets/estilos/SaSS/_estruct.scss
@@ -22,10 +22,12 @@
 
     #cabecera {
         grid-area: cabecera;
+        // border-bottom: 1px solid #000000;
     }
 
     #contenido {
         grid-area: contenido;
+        // margin-top: 5svh;
     }
 
     #pie {
@@ -182,7 +184,7 @@
 
         .cabecera__dkp {
             @include caja__flexible--edit ($flx_bx_ff: row nowrap, $flx_bx_alit: center, $flx_bx_juco: space-between, $flx_bx_gap: 0px);
-            height: 21vh;
+            height: 18svh;
             background-color: map-get($color, "gris_17");
             padding: 0 2.5%;
 
@@ -267,6 +269,354 @@
         }
 
         // *** FIN ESTILOS CABECERA RESOLUCIÓN ESCRITORIO ***
+
+    }
+
+    #contenido {
+        
+        #contenido__carrousel {
+            // height: 82svh;
+            // overflow: hidden;
+
+            .contenido__carrousel--slider {
+
+                .slider {
+                    position: relative;
+                    background: map-get($color, "gris_01");
+                    width: 100%;
+                    min-height: 578.92px;
+                    // height: 133.33svw;
+                    // height: 70.82svh;
+                    // height: calc(100svh - 13.33svw);
+                    height: 82svh;
+                    //margin: 20px;
+                    overflow: hidden;
+                    //border-radius: 10px;
+                    transition: .5s ease all;
+
+                    .slide {
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        clip-path: circle(0% at 0 50%);
+
+                        img {
+                            position: absolute;
+                            //width: 225%;
+                            width: 100%;
+                            //min-height: 500px;
+                            height: 100%;
+                            //object-fit: contain;
+                            object-fit: cover;
+                        }
+
+                        .info {
+                            position: absolute;
+                            //color: #222;
+                            // color: map-get($color, "gris_11");
+                            // font-family: $fam_02;
+                            //background: rgba(255, 255, 255, 0.3);
+                            // width: 75%;
+                            // margin-top: 50px;
+                            // margin-left: 50px;
+                            // padding: 20px;
+                            padding: 2svw;
+                            // border-radius: 5px;
+                            width: 100%;
+                            //box-shadow: 0 5px 25px rgb(1 1 1 / 5%);
+                            
+
+                            h2 {
+                                color: map-get($color, "gris_11");
+                                text-shadow: #000 4px 4px 1px;
+                                // -webkit-text-stroke-width: 3px;
+                                // -webkit-text-stroke-color: map-get($color, "negro");
+                                // text-shadow:
+                                //     2px 2px 0 #000,
+                                //     -2px 2px 0 #000,
+                                //     -2px -2px 0 #000,
+                                //     2px -2px 0 #000;
+                                margin: 0 0 9svw;
+                                font-family: $fam_02;
+                                font-size: 16svw;
+                                line-height: 1;
+                                font-weight: 700;
+                                padding: 0 0 0 3svw;
+                            }
+
+
+                            p {
+                                color: map-get($color, "gris_06");
+                                font-size: 9svw;
+                                text-shadow: #000 3px 3px 1px;
+                                font-weight: 400;
+                                font-family: $fam_02;
+                                padding: 0 7.5svw;
+                            }
+                        }
+                    }
+
+                    .slide.active {
+                        clip-path: circle(150% at 0 50%);
+                        transition: 2s;
+                    }
+
+                    &:hover {
+
+                        .navigation {
+                            opacity: 1;
+                        }
+
+                    }
+
+                }
+                  
+                .navigation {
+                    // height: 133.33svw;
+                    // height: calc(100svh - 13.33svw);
+                    // height: calc(100svh - 9svw);
+                    height: 85svh;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    opacity: 0;
+                    transition: opacity 0.5s ease;
+                }
+                  
+                .prev-btn,
+                .next-btn {
+                    z-index: 997;
+                    // font-size: 2em;
+                    color: #222;
+                    background: rgba(255, 255, 255, 0.5);
+                    padding: 3px;
+                    cursor: pointer;
+
+                    svg {
+                        width: 7svw;
+                        height: 7svw;
+                        fill: map-get($color, "negro");
+                        stroke: map-get($color, "negro");
+                        stroke-width: 3px;
+                    }
+                }
+                  
+                .prev-btn {
+                    border-top-right-radius: 3px;
+                    border-bottom-right-radius: 3px;
+                }
+                  
+                .next-btn {
+                    border-top-left-radius: 3px;
+                    border-bottom-left-radius: 3px;
+                }
+                  
+                .navigation-visibility {
+                    z-index: 997;
+                    display: flex;
+                    justify-content: center;
+
+                    .slide-icon {
+                        z-index: 997;
+                        background: rgba(255, 255, 255, 0.5);
+                        width: 20px;
+                        height: 10px;
+                        transform: translateY(-50px);
+                        margin: 0 6px;
+                        border-radius: 2px;
+                        box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
+                    }
+
+                    .slide-icon.active {
+                        background: map-get($color, "rojo_03");
+                    }
+                }
+
+            }
+
+            // .contenido__carrousel--slider {
+            //     @include caja__flexible--edit ($flx_bx_ff: row nowrap, $flx_bx_alit: flex-start, $flx_bx_juco: center, $flx_bx_gap: 0);
+            //     width: 700svw;
+            //     // height: 76svh;
+            //     transition: .5s ease all;
+            //     // overflow: hidden;
+            //     // margin: 3svh 0;
+
+            //     .contenido__carrousel--slide {
+            //         display: inline-block;
+            //         // width: 33.33%;
+            //         width: 14.28%;
+            //         height: 100%;
+            //         // padding-right: 5vw;
+            //         // padding: 0 5svw;
+
+            //         img {
+            //             width: 100%;
+            //             height: 100%;
+            //             object-fit: contain;
+            //         }
+
+            //     }
+
+            // }
+
+            // .contenido__carousel--slider {
+
+            //     .slider {
+            //         position: relative;
+            //         background: map-get($color, "negro");
+            //         width: 100%;
+            //         min-height: 655px;
+            //         // height: 133.33svw;
+            //         // height: 70.82svh;
+            //         height: calc(100svh - 13.33svw);
+            //         //margin: 20px;
+            //         overflow: hidden;
+            //         //border-radius: 10px;
+            //         transition: .5s ease all;
+
+            //         .slide {
+            //             position: absolute;
+            //             width: 100%;
+            //             height: 100%;
+            //             clip-path: circle(0% at 0 50%);
+
+            //             img {
+            //                 position: absolute;
+            //                 //width: 225%;
+            //                 width: 100%;
+            //                 //min-height: 500px;
+            //                 height: 100%;
+            //                 //object-fit: contain;
+            //                 object-fit: cover;
+            //             }
+
+            //             .info {
+            //                 position: absolute;
+            //                 //color: #222;
+            //                 // color: map-get($color, "gris_11");
+            //                 // font-family: $fam_02;
+            //                 //background: rgba(255, 255, 255, 0.3);
+            //                 // width: 75%;
+            //                 // margin-top: 50px;
+            //                 // margin-left: 50px;
+            //                 // padding: 20px;
+            //                 padding: 2svw;
+            //                 // border-radius: 5px;
+            //                 width: 100%;
+            //                 //box-shadow: 0 5px 25px rgb(1 1 1 / 5%);
+                            
+
+            //                 h2 {
+            //                     color: map-get($color, "gris_11");
+            //                     text-shadow: #000 3px 3px 1px;
+            //                     margin: 0 0 9svw;
+            //                     font-family: $fam_01;
+            //                 }
+
+            //                 .info__h2--nrm {
+            //                     font-size: 15svw;
+            //                 }
+
+            //                 .info__h2--mdn {
+            //                     font-size: 16svw;
+            //                 }
+
+            //                 .info__h2--gde {
+            //                     font-size: 20svw;
+            //                     line-height: 1.1;
+            //                 }
+
+            //                 p {
+            //                     color: map-get($color, "gris_06");
+            //                     font-size: 11svw;
+            //                     text-shadow: #000 3px 3px 1px;
+            //                     font-weight: 400;
+            //                     font-family: $fam_02;
+            //                 }
+            //             }
+            //         }
+
+            //         .slide.active {
+            //             clip-path: circle(150% at 0 50%);
+            //             transition: 2s;
+            //         }
+
+            //         &:hover {
+
+            //             .navigation {
+            //                 opacity: 1;
+            //             }
+
+            //         }
+
+            //     }
+                  
+            //     .navigation {
+            //         // height: 133.33svw;
+            //         // height: calc(100svh - 13.33svw);
+            //         // height: calc(100svh - 9svw);
+            //         height: 95svh;
+            //         display: flex;
+            //         align-items: center;
+            //         justify-content: space-between;
+            //         opacity: 0;
+            //         transition: opacity 0.5s ease;
+            //     }
+                  
+            //     .prev-btn,
+            //     .next-btn {
+            //         z-index: 997;
+            //         // font-size: 2em;
+            //         color: #222;
+            //         background: rgba(255, 255, 255, 0.8);
+            //         padding: 10px;
+            //         cursor: pointer;
+
+            //         svg {
+            //             width: 9svw;
+            //             height: 9svw;
+            //             fill: map-get($color, "negro");
+            //             stroke: map-get($color, "negro");
+            //             stroke-width: 3px;
+            //         }
+                    
+            //     }
+                  
+            //     .prev-btn {
+            //         border-top-right-radius: 3px;
+            //         border-bottom-right-radius: 3px;
+            //     }
+                  
+            //     .next-btn {
+            //         border-top-left-radius: 3px;
+            //         border-bottom-left-radius: 3px;
+            //     }
+                  
+            //     .navigation-visibility {
+            //         z-index: 997;
+            //         display: flex;
+            //         justify-content: center;
+
+            //         .slide-icon {
+            //             z-index: 997;
+            //             background: rgba(255, 255, 255, 0.5);
+            //             width: 20px;
+            //             height: 10px;
+            //             transform: translateY(-50px);
+            //             margin: 0 6px;
+            //             border-radius: 2px;
+            //             box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
+            //         }
+
+            //         .slide-icon.active {
+            //             background: map-get($color, "verde_03");
+            //         }
+            //     }
+
+            // }
+
+        }
 
     }
 
