--- a/assets/estilos/SaSS/styles.css
+++ b/assets/estilos/SaSS/styles.css
@@ -410,7 +410,7 @@ h1 {
   align-items: center;
   justify-content: space-between;
   gap: 0px;
-  height: 21vh;
+  height: 18svh;
   background-color: #f1f1f1;
   padding: 0 2.5%;
 }
@@ -479,6 +479,110 @@ h1 {
 }
 #contenedor #cabecera .cabecera__dkp .cabecera__dkp--menu ul li:last-child {
   padding: 0 0 0 1svh;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider {
+  position: relative;
+  background: #333;
+  width: 100%;
+  min-height: 578.92px;
+  height: 82svh;
+  overflow: hidden;
+  transition: 0.5s ease all;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider .slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-clip-path: circle(0% at 0 50%);
+          clip-path: circle(0% at 0 50%);
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider .slide img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider .slide .info {
+  position: absolute;
+  padding: 2svw;
+  width: 100%;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider .slide .info h2 {
+  color: #f9f5f4;
+  text-shadow: #000 4px 4px 1px;
+  margin: 0 0 9svw;
+  font-family: "Antonio", sans-serif;
+  font-size: 16svw;
+  line-height: 1;
+  font-weight: 700;
+  padding: 0 0 0 3svw;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider .slide .info p {
+  color: #ededed;
+  font-size: 9svw;
+  text-shadow: #000 3px 3px 1px;
+  font-weight: 400;
+  font-family: "Antonio", sans-serif;
+  padding: 0 7.5svw;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider .slide.active {
+  -webkit-clip-path: circle(150% at 0 50%);
+          clip-path: circle(150% at 0 50%);
+  transition: 2s;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider:hover .navigation {
+  opacity: 1;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .navigation {
+  height: 85svh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .prev-btn,
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .next-btn {
+  z-index: 997;
+  color: #222;
+  background: rgba(255, 255, 255, 0.5);
+  padding: 3px;
+  cursor: pointer;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .prev-btn svg,
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .next-btn svg {
+  width: 7svw;
+  height: 7svw;
+  fill: #000;
+  stroke: #000;
+  stroke-width: 3px;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .prev-btn {
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .next-btn {
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .navigation-visibility {
+  z-index: 997;
+  display: flex;
+  justify-content: center;
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .navigation-visibility .slide-icon {
+  z-index: 997;
+  background: rgba(255, 255, 255, 0.5);
+  width: 20px;
+  height: 10px;
+  transform: translateY(-50px);
+  margin: 0 6px;
+  border-radius: 2px;
+  box-shadow: 0 5px 25px rgba(1, 1, 1, 0.2);
+}
+#contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .navigation-visibility .slide-icon.active {
+  background: #960101;
 }
 
 /*
