--- a/assets/estilos/SaSS/_vars.scss
+++ b/assets/estilos/SaSS/_vars.scss
@@ -22,6 +22,7 @@ $wth_res: (
     "mob_03": 452px,
     "mob_04": 481px,
     "mob_05": 568px,
+    "mob_06": 660px,
     "tbl_01": 768px,
     "pst_tbl": 922px,
     "dkp_01": 1024px,
