--- a/assets/estilos/SaSS/styles.css
+++ b/assets/estilos/SaSS/styles.css
@@ -511,20 +511,21 @@ h1 {
 #contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider .slide .info h2 {
   color: #f9f5f4;
   text-shadow: #000 4px 4px 1px;
-  margin: 0 0 9svw;
+  margin: 0 0 4.78svh;
   font-family: "Antonio", sans-serif;
-  font-size: 16svw;
+  font-size: calc(8.5svh + 2svw);
   line-height: 1;
   font-weight: 700;
-  padding: 0 0 0 3svw;
+  padding: 3svh 0 0 3svw;
 }
 #contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider .slide .info p {
   color: #ededed;
-  font-size: 9svw;
+  font-size: calc(4.78svh + 1svw);
   text-shadow: #000 3px 3px 1px;
   font-weight: 400;
   font-family: "Antonio", sans-serif;
   padding: 0 7.5svw;
+  line-height: 1;
 }
 #contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider .slide.active {
   -webkit-clip-path: circle(150% at 0 50%);
@@ -552,8 +553,8 @@ h1 {
 }
 #contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .prev-btn svg,
 #contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .next-btn svg {
-  width: 7svw;
-  height: 7svw;
+  width: 3.72svh;
+  height: 3.72svh;
   fill: #000;
   stroke: #000;
   stroke-width: 3px;
@@ -585,6 +586,22 @@ h1 {
   background: #960101;
 }
 
+@media only screen and (min-width: 660px) {
+  #contenedor #cabecera .cabecera__movil .cabecera__movil--marca .cabecera__movil--marca_img {
+    width: 109.11px;
+  }
+  #contenedor #cabecera .cabecera__movil .cabecera__movil--marca .cabecera__movil--marca_txt .h1__01 {
+    font-size: 79.2px;
+  }
+  #contenedor #cabecera .cabecera__movil .cabecera__movil--marca .cabecera__movil--marca_txt .h1__02 {
+    font-size: 93.06px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  #contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider .slide .info p {
+    padding: 0 3svw;
+  }
+}
 /*
 @media only screen and (min-width: map-get($wth_res, "mob_03")) {
 
